Fixed some swagger documentation.
