# swagger.json
@@ -44,19 +44,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "user": {
                   "example": "any"
                 },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
+                "todo": {
                   "example": "any"
                 }
               }
@@ -73,7 +64,7 @@
         }
       }
     },
-    "/todo/{id}": {
+    "/todo/{user}": {
       "get": {
         "description": "",
         "produces": [
@@ -81,7 +72,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "user",
             "in": "path",
             "required": true,
             "type": "string"
@@ -97,7 +88,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "user",
             "in": "path",
             "required": true,
             "type": "string"
@@ -108,19 +99,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "user": {
                   "example": "any"
                 },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
+                "todo": {
                   "example": "any"
                 }
               }
@@ -140,7 +122,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "user",
             "in": "path",
             "required": true,
             "type": "string"
